Fix mobile view overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 
     body {
         margin: 0;
+        overflow-x: hidden;
         font-family: "Trebuchet MS", "Segoe UI", sans-serif;
         color: #e2e8f0;
         background: #020617;
